--- a/1 - WebScraping_Part1.ipynb
+++ b/1 - WebScraping_Part1.ipynb
@@ -1,6 +1,14 @@
-
 {
  "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "f63aa1b0",
+   "metadata": {},
+   "source": [
+    "HEADINGS\n",
+    "- Loading web pages using \"Request\" Module "
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 1,
