--- a/1 - WebScraping_Part1.ipynb
+++ b/1 - WebScraping_Part1.ipynb
@@ -6,7 +6,30 @@
    "metadata": {},
    "source": [
     "HEADINGS\n",
-    "- Loading web pages using \"Request\" Module "
+    "- Loading web pages using \"Request\" Module \n",
+    "\n",
+    "- BeautifulSoup Library\n",
+    "    - installing BeautifulSoup\n",
+    "    - pip install beautifulsoup4\n",
+    "    \n",
+    "- Extract Head Section of Webpage\n",
+    "\n",
+    "- Extract Body of Webpage\n",
+    "\n",
+    "- BeautifulSoup Methods\n",
+    "    - select() - used to select all the instances of specified HTML tag - it returns Python List\n",
+    "        - Extract text of first H1 Tag\n",
+    "        - Select the text of all H1 Tags , and then we need to store these text in a new list\n",
+    "    - find_all() - used to return a list of all instances of specified HTML tag\n",
+    "\n",
+    "- Fetching SRC\n",
+    "\n",
+    "- Task Number 1\n",
+    "    - Fetch the HREF information of all anchor 'a' tag\n",
+    "    - Also print the number of anchor tags \n",
+    "\n",
+    "- Task Number 2\n",
+    "    - Store image 'src' and 'alt' attribute information in Pandas Data Frame"
    ]
   },
   {
