--- a/2 - WebScraping_Jobstreet_Part1_Part2.ipynb
+++ b/2 - WebScraping_Jobstreet_Part1_Part2.ipynb
@@ -1,6 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "83088fd9",
+   "metadata": {},
+   "source": [
+    "HEADINGS\n",
+    "\n",
+    "- Generating a url for job position and job location\n",
+    "\n",
+    "- Check status code\n",
+    "\n",
+    "- Creating BeautifulSoup Object\n",
+    "    - Here we are searching for div tags having # sx2jih0 zcydq852 zcydq842 zcydq872 zcydq862 zcydq82a zcydq832 zcydq8d2 zcydq8cq # class name\n",
+    "\n",
+    "- Printing first card\n",
+    "\n",
+    "- Fetching the job name\n",
+    "\n",
+    "- Fetching job url\n",
+    "\n",
+    "- Fetching company name\n",
+    "\n",
+    "- Fetching job location\n",
+    "\n",
+    "- Fetching salary information\n",
+    "\n",
+    "- Fetching job summary\n",
+    "\n",
+    "- Fetching the LI tag text and saving it in summary \n",
+    "\n",
+    "- Removing the last comma from job_summary\n",
+    "    - rstrip - is used to remove the character at the end of string\n",
+    "\n",
+    "- Putting job_summary inside try except\n",
+    "\n",
+    "- Fetching job post date\n",
+    "    - remove everything after T - here we want only 2021-10-23 - str.split()\n",
+    "\n",
+    "- Create A Function\n",
+    "    - Scrape The Job Information From EveryCard\n",
+    "\n",
+    "- Calling Function For Every Job Card\n",
+    "\n",
+    "- Print JobDetails For First Card\n",
+    "\n",
+    "- Print JobDetails For Second Card\n",
+    "\n",
+    "- Print JobDetails For Third Card"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "bac482be",
