try anchor tag 1

--- a/1 - WebScraping_Part1.ipynb
+++ b/1 - WebScraping_Part1.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "source": [
     "HEADINGS\n",
-    "- Loading web pages using \"Request\" Module \n",
     "\n",
     "- BeautifulSoup Library\n",
     "    - installing BeautifulSoup\n",
@@ -30,6 +29,24 @@
     "\n",
     "- Task Number 2\n",
     "    - Store image 'src' and 'alt' attribute information in Pandas Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5c233f2",
+   "metadata": {},
+   "source": [
+    "<!-- BEGIN anchor cell -->\n",
+    "<a id=\"Loading_web_pages_using_Request_Module\"></a>\n",
+    "<!-- END anchor cell -->\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c395c1f",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading1\"></a>"
    ]
   },
   {
@@ -62,6 +79,14 @@
     "res = requests.get('https://fortifysecurity.org/')\n",
     "# check status code - (google: hhtp response status code)\n",
     "print(res.status_code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56b74415",
+   "metadata": {},
+   "source": [
+    "[Loading_web_pages_using_Request_Module](#heading1)"
    ]
   },
   {
