add anchor tag at heading 2

--- a/1 - WebScraping_Part1.ipynb
+++ b/1 - WebScraping_Part1.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "HEADINGS\n",
     "\n",
-    "- BeautifulSoup Library\n",
+    "- [Loading web pages using \"Request\" Module](#heading1)\n",
+    "- [BeautifulSoup Library](#heading2)\n",
     "    - installing BeautifulSoup\n",
     "    - pip install beautifulsoup4\n",
     "    \n",
@@ -29,16 +30,6 @@
     "\n",
     "- Task Number 2\n",
     "    - Store image 'src' and 'alt' attribute information in Pandas Data Frame"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d5c233f2",
-   "metadata": {},
-   "source": [
-    "<!-- BEGIN anchor cell -->\n",
-    "<a id=\"Loading_web_pages_using_Request_Module\"></a>\n",
-    "<!-- END anchor cell -->\n"
    ]
   },
   {
@@ -79,14 +70,6 @@
     "res = requests.get('https://fortifysecurity.org/')\n",
     "# check status code - (google: hhtp response status code)\n",
     "print(res.status_code)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "56b74415",
-   "metadata": {},
-   "source": [
-    "[Loading_web_pages_using_Request_Module](#heading1)"
    ]
   },
   {
@@ -747,6 +730,14 @@
    ],
    "source": [
     "print(res.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77c26c19",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading2\"></a>"
    ]
   },
   {
