--- a/1 - WebScraping_Part1.ipynb
+++ b/1 - WebScraping_Part1.ipynb
@@ -20,23 +20,23 @@
     "    - installing BeautifulSoup\n",
     "    - pip install beautifulsoup4\n",
     "    \n",
-    "- Extract Head Section of Webpage\n",
+    "- [Extract Head Section of Webpage](#heading3)\n",
     "\n",
-    "- Extract Body of Webpage\n",
+    "- [Extract Body of Webpage](#heading4)\n",
     "\n",
-    "- BeautifulSoup Methods\n",
+    "- [BeautifulSoup Methods](#heading5)\n",
     "    - select() - used to select all the instances of specified HTML tag - it returns Python List\n",
     "        - Extract text of first H1 Tag\n",
     "        - Select the text of all H1 Tags , and then we need to store these text in a new list\n",
     "    - find_all() - used to return a list of all instances of specified HTML tag\n",
     "\n",
-    "- Fetching SRC\n",
+    "- [Fetching SRC](#heading6)\n",
     "\n",
-    "- Task Number 1\n",
+    "- [Task Number 1](#heading7)\n",
     "    - Fetch the HREF information of all anchor 'a' tag\n",
     "    - Also print the number of anchor tags \n",
     "\n",
-    "- Task Number 2\n",
+    "- [Task Number 2](#heading8)\n",
     "    - Store image 'src' and 'alt' attribute information in Pandas Data Frame"
    ]
   },
@@ -791,6 +791,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee579cfe",
+   "metadata": {},
+   "source": [
+    "[Back to Heading](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "4dabd924",
@@ -827,6 +835,22 @@
    "source": [
     "page_title = soup.title.text\n",
     "print(page_title)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70f25add",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91b94781",
+   "metadata": {},
+   "source": [
+    "[Back to Heading](#heading0)"
    ]
   },
   {
@@ -868,6 +892,22 @@
     "# Extract Head Section of Webpage\n",
     "page_head = soup.head\n",
     "print(page_head)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d93072c",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading4\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b4fc83e",
+   "metadata": {},
+   "source": [
+    "[Back to Heading](#heading0)"
    ]
   },
   {
@@ -1379,6 +1419,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07d53b5f",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading5\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a7f5603",
+   "metadata": {},
+   "source": [
+    "[Back to Heading](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "f6e369f5",
@@ -1494,6 +1550,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c6f1c18",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading6\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9c15469",
+   "metadata": {},
+   "source": [
+    "[Back to Heading](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "cc3ab9e0",
@@ -1555,6 +1627,22 @@
     "# admin/course_image/crime_defender.jpg     Crime Defender\n",
     "# if alt text is not available you need to replace it with Not Available\n",
     "# assets/img/about.jpg                      Not Available"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bcbe3df",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading7\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b988c7f",
+   "metadata": {},
+   "source": [
+    "[Back to Heading](#heading0)"
    ]
   },
   {
@@ -1644,6 +1732,22 @@
     "    print(everyhref)\n",
     "\n",
     "print(\"Number of Anchor Tags :\",len(href_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e691c08b",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading8\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f461eef",
+   "metadata": {},
+   "source": [
+    "[Back to Heading](#heading0)"
    ]
   },
   {
