--- a/2 - WebScraping_Jobstreet_Part1_Part2.ipynb
+++ b/2 - WebScraping_Jobstreet_Part1_Part2.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b24d5325",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading0\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "83088fd9",
    "metadata": {},
    "source": [
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bac482be",
    "metadata": {},
    "outputs": [],
@@ -64,8 +72,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5b8f2a9",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c1d69a68",
    "metadata": {},
    "outputs": [],
@@ -81,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "340af645",
    "metadata": {},
    "outputs": [
@@ -99,8 +115,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c441fb4",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8ee9db75",
    "metadata": {},
    "outputs": [
@@ -120,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d673b969",
    "metadata": {},
    "outputs": [
@@ -140,8 +164,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e513a473",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0eaeded5",
    "metadata": {},
    "outputs": [],
@@ -153,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "15d4ba36",
    "metadata": {},
    "outputs": [
@@ -176,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3a47607b",
    "metadata": {},
    "outputs": [
@@ -195,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6fc1f168",
    "metadata": {},
    "outputs": [],
@@ -207,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "id": "1ba42bc1",
    "metadata": {},
    "outputs": [
@@ -228,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": null,
    "id": "adf2830b",
    "metadata": {},
    "outputs": [
@@ -251,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "e4fea702",
    "metadata": {},
    "outputs": [],
@@ -272,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "f5e84ac3",
    "metadata": {},
    "outputs": [
@@ -290,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "3b2a0bdb",
    "metadata": {},
    "outputs": [],
@@ -311,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "a3b3da69",
    "metadata": {},
    "outputs": [
@@ -329,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "db05fc0e",
    "metadata": {},
    "outputs": [],
@@ -349,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "98972064",
    "metadata": {},
    "outputs": [
@@ -367,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "ad4adbbb",
    "metadata": {},
    "outputs": [
@@ -390,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "2656ab9a",
    "metadata": {},
    "outputs": [
@@ -412,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "e79e8ebd",
    "metadata": {},
    "outputs": [
@@ -438,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "b546f07e",
    "metadata": {},
    "outputs": [
@@ -460,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "85e4eb75",
    "metadata": {},
    "outputs": [],
@@ -484,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "41cf6f84",
    "metadata": {},
    "outputs": [
@@ -502,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "89a2f0bb",
    "metadata": {},
    "outputs": [
@@ -523,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "c76b596f",
    "metadata": {},
    "outputs": [
@@ -547,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "196e4d97",
    "metadata": {},
    "outputs": [
@@ -566,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "c275137b",
    "metadata": {},
    "outputs": [],
@@ -640,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "899b3212",
    "metadata": {
     "scrolled": true
@@ -658,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "b0f2d2a4",
    "metadata": {},
    "outputs": [
@@ -676,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "dc3d64b3",
    "metadata": {},
    "outputs": [
@@ -695,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "22938b5c",
    "metadata": {},
    "outputs": [
@@ -714,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "3c7c45fe",
    "metadata": {},
    "outputs": [
