update all headings with linked anchor tags (done)

--- a/2 - WebScraping_Jobstreet_Part1_Part2.ipynb
+++ b/2 - WebScraping_Jobstreet_Part1_Part2.ipynb
@@ -15,47 +15,47 @@
    "source": [
     "HEADINGS\n",
     "\n",
-    "- Generating a url for job position and job location\n",
+    "- [\"Generating a url for job position and job location\"](#heading1)\n",
     "\n",
-    "- Check status code\n",
+    "- [\"Check status code\"](#heading2)\n",
     "\n",
-    "- Creating BeautifulSoup Object\n",
+    "- [\"Creating BeautifulSoup Object\"](#heading3)\n",
     "    - Here we are searching for div tags having # sx2jih0 zcydq852 zcydq842 zcydq872 zcydq862 zcydq82a zcydq832 zcydq8d2 zcydq8cq # class name\n",
     "\n",
-    "- Printing first card\n",
+    "- [\"Printing first card\"](#heading4)\n",
     "\n",
-    "- Fetching the job name\n",
+    "- [\"Fetching the job name\"](#heading5)\n",
     "\n",
-    "- Fetching job url\n",
+    "- [\"Fetching job url\"](#heading6)\n",
     "\n",
-    "- Fetching company name\n",
+    "- [\"Fetching company name\"](#heading7)\n",
     "\n",
-    "- Fetching job location\n",
+    "- [\"Fetching job location\"](#heading8)\n",
     "\n",
-    "- Fetching salary information\n",
+    "- [\"Fetching salary information\"](#heading9)\n",
     "\n",
-    "- Fetching job summary\n",
+    "- [\"Fetching job summary\"](#heading10)\n",
     "\n",
-    "- Fetching the LI tag text and saving it in summary \n",
+    "- [\"Fetching the LI tag text and saving it in summary \"](#heading11)\n",
     "\n",
-    "- Removing the last comma from job_summary\n",
+    "- [\"Removing the last comma from job_summary\"](#heading12)\n",
     "    - rstrip - is used to remove the character at the end of string\n",
     "\n",
-    "- Putting job_summary inside try except\n",
+    "- [\"Putting job_summary inside try except\"](#heading13)\n",
     "\n",
-    "- Fetching job post date\n",
+    "- [\"Fetching job post date\"](#heading14)\n",
     "    - remove everything after T - here we want only 2021-10-23 - str.split()\n",
     "\n",
-    "- Create A Function\n",
+    "- [\"Create A Function\"](#heading15)\n",
     "    - Scrape The Job Information From EveryCard\n",
     "\n",
-    "- Calling Function For Every Job Card\n",
+    "- [\"Calling Function For Every Job Card\"](#heading16)\n",
     "\n",
-    "- Print JobDetails For First Card\n",
+    "- [\"Print JobDetails For First Card\"](#heading17)\n",
     "\n",
-    "- Print JobDetails For Second Card\n",
+    "- [\"Print JobDetails For Second Card\"](#heading18)\n",
     "\n",
-    "- Print JobDetails For Third Card"
+    "- [\"Print JobDetails For Third Card\"](#heading19)"
    ]
   },
   {
@@ -69,6 +69,14 @@
     "from bs4 import BeautifulSoup\n",
     "from datetime import datetime\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "352e9ad5",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading1\"></a>"
    ]
   },
   {
@@ -112,6 +120,14 @@
    "source": [
     "url = get_url('java','kuala lumpur')\n",
     "print(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58cf66fe",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading2\"></a>"
    ]
   },
   {
@@ -165,6 +181,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1cb9378a",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e513a473",
    "metadata": {},
    "source": [
@@ -207,6 +231,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "771af6c6",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading4\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80f48ea0",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3a47607b",
@@ -238,6 +278,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b05a95d9",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading5\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a76397e0",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1ba42bc1",
@@ -256,6 +312,22 @@
     "\n",
     "job_name = card.find('div','sx2jih0 _2j8fZ_0 sIMFL_0 _1JtWu_0').text\n",
     "print(job_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8574eaa",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading6\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da40de25",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
    ]
   },
   {
@@ -279,6 +351,22 @@
     "\n",
     "job_url = 'https://www.jobstreet.com.my'+anchor_tag['href']\n",
     "print(job_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c4d49f5",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading7\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47b468ae",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
    ]
   },
   {
@@ -321,6 +409,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa771d7e",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading8\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "953b0981",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3b2a0bdb",
@@ -360,6 +464,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90974a22",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading9\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "214164aa",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "db05fc0e",
@@ -395,6 +515,22 @@
    ],
    "source": [
     "print(salary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ff04296",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading10\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "389dabe2",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
    ]
   },
   {
@@ -443,6 +579,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03fe2b0d",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading11\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8b05a84",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e79e8ebd",
@@ -469,6 +621,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b77d3416",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading12\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bc3bbd9",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b546f07e",
@@ -488,6 +656,22 @@
     "\n",
     "summary = summary.rstrip(',')\n",
     "print(summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc073584",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading13\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "879d2fd0",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
    ]
   },
   {
@@ -530,6 +714,22 @@
    ],
    "source": [
     "print(summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29c8e997",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading14\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30838463",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
    ]
   },
   {
@@ -594,6 +794,22 @@
    "source": [
     "today = datetime.today().strftime('%Y-%m-%d')\n",
     "print(today)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eccfc4f5",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading15\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cc35849",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
    ]
   },
   {
@@ -671,6 +887,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b9757fa",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading16\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2951564d",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "899b3212",
@@ -707,6 +939,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2bd81128",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading17\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "188bcc8e",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dc3d64b3",
@@ -726,6 +974,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8de94287",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading18\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19ad9685",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "22938b5c",
@@ -742,6 +1006,22 @@
    "source": [
     "# Print JobDetails For Second Card\n",
     "print(records[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd21bf4f",
+   "metadata": {},
+   "source": [
+    "<a id=\"heading19\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4969f253",
+   "metadata": {},
+   "source": [
+    "[\"Back to Heading\"](#heading0)"
    ]
   },
   {
